# pangolin

./: .gitignore  API.md  CHANGELOG.md  Example-GLM.ipynb  Example-Gaussian-Gaussian.ipynb  Example-Hierarchical-Regression.ipynb  Example-Matrix multiplication from vmap.ipynb  Example-Polynomial Regression.ipynb  Example-Simple Regression.ipynb  Example-Simulation Based Calibration.ipynb  Example-Simulation-Based-Calibration.ipynb  Example-Tutorial.ipynb  Example-vmap.ipynb  INSTALL.md  README.md  Simulation Based Calibration.ipynb  TODO.md  demo-8-schools.ipynb  demo-GP-regression.ipynb  demo-Hierarchical logistic regression.ipynb  demo-IRT.ipynb  demo-calculate.ipynm.ipynb  demo-interface.ipynb  demo-lda.ipynb  demo-logistic-regression.ipynb  demo-printing.ipynb  demo-repeated-transforms.ipynb  demo-stan.ipynb  demo-transforms.ipynb  index.html  pangolin.html  pangolin.py  pyproject.toml  requirements.txt  search.js  setup.py  test_vmap_scan.py  understanding-numpyro.ipynb
cleanpangolin/: setup.py
demos/: 1PL.ipynb  2PL.ipynb  8schools.ipynb  GP-regression.ipynb  autoregressive.ipynb  beta-bernoulli-ppls.ipynb  calculator-ppls.ipynb  coins.ipynb  demo-IRT.ipynb  demo-logistic-regression.ipynb  eight-schools-ppls.ipynb  how-pangolin-works.ipynb  interface.ipynb  ir.ipynb  normal-normal_tforms-and-stan-code.ipynb  normal_normal_tforms_and_stan_code.ipynb  numpyro-plate-test.ipynb  polling.ipynb  pymc-test.ipynb  regression.ipynb  scan.ipynb  timeseries.ipynb  understanding-numpyro-plates.ipynb
docs/source/: conf.py  (+11 more)
exploratory notebooks/: README.md  demo-JAGS.ipynb  demo-automap.ipynb  demo-hierarchical-normals.ipynb  demo-indexing.ipynb  demo-infer.ipynb  demo-lda.ipynb  demo-psd.ipynb  how-does-JAX-vmap-work.ipynb  python-bytecode.ipynb  random-effects-models.ipynb  understanding-STAN-types.ipynb  understanding-bytecode.ipynb  understanding-missing-data.ipynb  understanding-numba.ipynb  understanding-numpyro.ipynb  understanding-python-speed.ipynb
pangolin/: THOUGHTS.md  __init__.py  arrays.py  automap.py  automap_old.py  automap_simple.py  backend.py  blackjax.py  calculate.py  dag.py  ezjags.py  ezstan.py  infer.py  inference.html  inference.py  inference_jags.py  inference_jags_stan_shared.py  inference_numpyro.py  inference_numpyro_modelbased.py  inference_stan.py  interface.html  interface.py  ir.html  ir.py  jax_backend.py  loops.py  new_infer.py  simple.py  sql.py  torch_backend.py  transforms.py  util.py
pangolin-jags/: Example-GLM.ipynb  Example-GP-regression.ipynb  Example-Indexing.ipynb  Example-Time-series.ipynb  Example-Tutorial.ipynb  Example-Using-scan.ipynb  pangolin.py
tests/: test_000_util.py  test_001_dag.py  test_004_jax_backend.py  test_all_inference.py  test_automap.py  test_calculate.py  test_cross_inference.py  test_dag.py  test_dag_rvs.py  test_ezstan.py  test_implicit_vectorization.py  test_infer.py  test_inference.py  test_inference_stan.py  test_interface.py  test_jags.py  test_loops.py  test_mixture.py  test_new_automap.py  test_numpyo.py  test_numpyo_modelbased.py  test_sql.py  test_stan.py  test_transforms.py  test_util.py
thoughts/: README.md  fake_loops.md  how_it_works.md  (+1 more)
(+357 files in other folders)
