[project]
name = "pangolin"
version = "0.0.1"
description = "Probabilistic inference focused on fun"
requires-python = ">=3.11,<3.14"
dependencies = [
    "jax",
    "jaxtyping",
    "numpy",
    "scipy",
    "numpyro",
    "makefun>=1.16.0",
    "blackjax>=1.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black",
    "pytest",
    "arviz",
]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc2>=0.5.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-book-theme>=1.1.3",
    "sphinx-autodoc-typehints>=3.5.2",
]

[project.optional-dependencies]
torch = ["torch","funtorch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--doctest-modules"
