[project]
name = "pangolin"
version = "0.0.3"
description = "Probabilistic inference focused on fun"
requires-python = ">=3.12"
dependencies = [
    "jax<=0.9.2", # numpyro bug for 0.10.0
    "jaxtyping",
    "numpy",
    "scipy",
    "numpyro",
    "makefun",
    "blackjax",
]
readme = "README.md" 

[project.urls]
Homepage = "https://github.com/justindomke/pangolin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black",
    "pytest",
    "pytest-clarity",
    "pytest-timeout",
    "arviz",
    "ty",
    "ipykernel",
    "seaborn",
    "ipywidgets",
    "pymc",
    "pyro-ppl",
    "pyjags-jw",
    "cmdstanpy",
]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc2>=0.5.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-book-theme>=1.1.3",
    "sphinx-autodoc-typehints>=3.5.2",
]

[project.optional-dependencies]
torch = ["torch"]

[tool.pytest.ini_options]
testpaths = ["tests","pangolin"]
addopts = "-s -vv --doctest-modules"
norecursedirs = [
    "pangolin-jags",
    "hidden",
    "models",
    "*.egg", 
    ".git", 
    ".venv", 
    "node_modules", 
    "dist", 
    "build"
]
timeout = 20

[tool.black]
line-length = 120
